# backend/routes/index.js
@@ -1,23 +1,20 @@
 const router = require('express').Router();
-
-router.get(
-  // #swagger.tags=['Home'];
-  '/',
-  (req, res) => {
-    res.send('Hello from the index.js routes file!');
-  }
-);
+const passport = require('passport');
 
 router.use('/api-docs', require('./swagger.js'));
-
 router.use('/course-instances', require('./course-instances.js'));
-
 router.use('/courses', require('./courses.js'));
-
 router.use('/enrollments', require('./enrollments.js'));
-
 router.use('/students', require('./students.js'));
-
 router.use('/teachers', require('./teachers.js'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+router.get('/logout', function (req, res, next) {
+  req.logout(function(err) {
+    if (err) { return next(err); }
+    res.redirect('/');
+  }
+)}
+);
 
 module.exports = router;
